force-app/main/default/objects/sortablegrid__SDG_Action__c/fields/sortablegrid__Action_Type__c.field-meta.xml
<CustomField>
    <fullName>sortablegrid__Action_Type__c</fullName>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Row</fullName>
            </value>
            <value>
                <fullName>List</fullName>
            </value>
            <value>
                <fullName>Row Button</fullName>
            </value>
            <value>
                <fullName>List Button</fullName>
            </value>
            <value>
                <fullName>List Multi</fullName>
                <label>List Multi-Select</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>