force-app/main/default/objects/sortablegrid__SDG_Action__c/fields/sortablegrid__Event__c.field-meta.xml
<CustomField>
    <fullName>sortablegrid__Event__c</fullName>
    <inlineHelpText>Lightning event to raise: eg c.force:editRecord</inlineHelpText>
    <label>Event</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>