force-app/main/default/objects/sortablegrid__SDG_Action__c/fields/sortablegrid__Icon__c.field-meta.xml
<CustomField>
    <fullName>sortablegrid__Icon__c</fullName>
    <inlineHelpText>Icon name from Lightning Design System - eg standard:contact</inlineHelpText>
    <label>Icon</label>
    <length>50</length>
    <type>Text</type>
</CustomField>