force-app/main/default/objects/sortablegrid__SDG_Action__c/fields/sortablegrid__Requires_Deletable__c.field-meta.xml
<CustomField>
    <fullName>sortablegrid__Requires_Deletable__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Only show this action if the user is required to have Delete rights on the sObject on the grid.</inlineHelpText>
    <label>Requires Deletable</label>
    <type>Checkbox</type>
</CustomField>