force-app/main/default/objects/sortablegrid__SDG_Action__c/fields/sortablegrid__SDG__c.field-meta.xml
<CustomField>
    <fullName>sortablegrid__SDG__c</fullName>
    <label>SDG</label>
    <referenceTo>sortablegrid__SDG__c</referenceTo>
    <relationshipLabel>Sortable Data Grid Actions</relationshipLabel>
    <relationshipName>SDG_Actions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>