force-app/main/default/objects/sortablegrid__SDG_Action__c/validationRules/sortablegrid__Payload_must_end_with_brace.validationRule-meta.xml
<ValidationRule>
    <fullName>sortablegrid__Payload_must_end_with_brace</fullName>
    <active>true</active>
    <errorConditionFormula>RIGHT( sortablegrid__Event_Payload__c , 1) != &apos;}&apos;</errorConditionFormula>
    <errorMessage>Payload must end with a }</errorMessage>
</ValidationRule>